project(qq_wuxia)
cmake_minimum_required(VERSION 2.6)
set(CMAKE_CXX_COMPILER "c++")
add_definitions(-Wfatal-errors -g -Wno-unused-function -Wall -fno-strict-aliasing -fPIC -std=c++11)
include_directories(../thirdparty/)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../thirdparty/)
#message(${CMAKE_CURRENT_SOURCE_DIR})
#link_libraries(mysqlclient uuid z pthread dl rt)
link_libraries(uuid z pthread dl rt)
aux_source_directory(. DIR_SRCS)
add_executable(qq_wuxia ${DIR_SRCS})
target_link_libraries(qq_wuxia libevent.a)
target_link_libraries(qq_wuxia libmysqlclient_r.a)